--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "author": "Wiktoria Lucarz",
   "license": "ISC",
   "scripts": {
+    "start-dev": "webpack-dev-server",
     "build": "webpack",
     "build-css": "node-sass --include-path scss src/sass/screen.scss   dist/stylesheets/screen.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
+      
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -19,8 +21,5 @@
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4"
-  },
-  "dependencies": {
-    "lodash": "^4.17.10"
   }
 }
